syntax = "proto3";

package poll;

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

message Poll {
    string id = 1;
    string title = 2;
    string description = 3;
    optional string image = 4;
    optional string opengraphImage = 5;
    repeated Answer answers = 6;
}
  
message Answer {
    string id = 1;
    string text = 2;
}

service PollService {
    rpc CreatePoll(CreatePollRequest) returns (google.protobuf.StringValue) {}
    rpc DeletePoll(UuidRequest) returns (google.protobuf.Empty) {}
    rpc GetPollsByUserId(UuidRequest) returns (PollsResponse) {}
    rpc GetFeed(google.protobuf.Empty) returns (PollsResponse) {}
}

message UuidRequest {
    string uuid = 1;
}
  
message CreatePollRequest {
    string title = 1;
    string description = 2;
    string image = 3;
    repeated string answers = 4;
    string creatorId = 5;
}

message PollsResponse {
    repeated Poll polls = 1;
}